[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/TopBar.gd" id=1]

[node name="TopBar" type="HBoxContainer"]
unique_name_in_owner = true
script = ExtResource("1")
custom_minimum_size = Vector2(0, 120)
alignment = 0
theme_override_constants/separation = 8

[node name="%BtnMoney" type="Button" parent="."]
unique_name_in_owner = true
size_flags_horizontal = 2
text = "$ 0"

[node name="%BtnGems" type="Button" parent="."]
unique_name_in_owner = true
size_flags_horizontal = 2
text = "ðŸ’Ž 0"

[node name="%BtnZone" type="Button" parent="."]
unique_name_in_owner = true
size_flags_horizontal = 3
text = "Zona: -"

[node name="%BtnLevel" type="Button" parent="."]
unique_name_in_owner = true
size_flags_horizontal = 2
text = "Lvl 1"

[node name="%XPBlock" type="HBoxContainer" parent="."]
unique_name_in_owner = true
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="%BtnXP" type="Button" parent="%XPBlock"]
unique_name_in_owner = true
size_flags_horizontal = 2
flat = true
text = "XP"

[node name="%XPBar" type="ProgressBar" parent="%XPBlock"]
unique_name_in_owner = true
size_flags_horizontal = 3
value = 0.0
max_value = 100.0

[node name="%BtnOptions" type="Button" parent="."]
unique_name_in_owner = true
size_flags_horizontal = 0
text = "âš™"
